--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Related Videos Graph</title>
+        <title>bandalike</title>
         <meta charset='utf-8'>
         <meta name=viewport content='width=device-width, initial-scale=1, height=device-height'>
+        <link href="https://fonts.googleapis.com/css?family=Orbitron:700" rel="stylesheet"> 
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
         <script src="http://visjs.org/dist/vis.js"></script>
         <link href="http://visjs.org/dist/vis.css" rel="stylesheet" type="text/css" />
@@ -13,15 +14,6 @@
     </head>
 
     <body>
-        <style>
-            #graph {
-                height: 900px;
-            }
-            svg {
-                width: 36px;
-                height: 36px;
-            }
-        </style>
         <div id='top-bar'>
             <h5>bandalike</h5>
         </div>
