added loading indicator

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         <div id='top-bar'>
             <h5>bandalike</h5>
         </div>
+        <div id="loading-screen"><h6>Loading...</h6></div>
         <div id="graph"></div>
     </body>
 </html>
