--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
     <body>
         <div id='top-bar'>
             <h5>bandalike</h5>
+            <div>
+                <input type="text" id="search-box" placeholder="Search">
+                <button id="submit-search">Go</button>
+            </div>
         </div>
         <div id="loading-screen"><h6>Loading...</h6></div>
         <div id="graph"></div>
