--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,11 @@
                 <button id="submit-search">Go</button>
             </div>
         </div>
-        <div id="loading-screen"><h6>Loading...</h6></div>
+        <div id="intro">
+            <span id="intro-info">Enter an artist name to get started</span>
+            <span id="intro-back-graphic">bandalike</span>
+        </div>
+        <!--<div id="loading-screen"><h6>Loading...</h6></div>-->
         <div id="graph"></div>
     </body>
 </html>
