added bottom bar with nametag

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
                 <button id="submit-search">Go</button>
             </div>
         </div>
+        <div id="bottom-bar">
+            <span id="name-tag">
+                ryanlacroix
+            </span>
+        </div>
         <div id="intro">
             <span id="intro-info">Enter an artist name to get started</span>
             <span id="intro-back-graphic">bandalike</span>
